# vk-poll-tracker

./: .env  .env.example  .gitignore  .~lock.report.xlsx#  README.md  VK Poll Tracker.spec  main.py  promp_for_claude.md  pyproject.toml  report.xlsx  requirements.txt  Отчёт_январь-апрель_младшая.xlsx  Отчёт_январь-апрель_старшая.xlsx
.github/workflows/: build.yml
app/: .~lock.report.xlsx#  config.py  gui.py  keywords.py  main.py
app/exporters/: excel_exporter.py
app/models/: poll.py  record.py  user.py
app/services/: analytics_service.py  poll_service.py  user_service.py
app/vk/: client.py  methods.py  rate_limiter.py
