[project]
name = "vk-poll-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "keyring>=25.7.0",
    "ngrok>=1.7.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.3.0",
    "pyinstaller>=6.19.0",
    "pyqt6>=6.11.0",
    "python-dotenv>=1.0.0",
]
